upload functionality added

--- a/app/views/settlement/gameevent.html
+++ b/app/views/settlement/gameevent.html
@@ -56,7 +56,7 @@
                 <th>{{'table.heading.gamemedia.gameHeader.dataUploadDate' | translate}}</th>
                 <th>{{'table.heading.gamemedia.gameHeader.businessLine' | translate}}</th>
                 <th>{{'table.heading.gamemedia.gameHeader.category' | translate}}</th>
-                <th>{{'table.heading.gamemedia.gameHeader.charegecode' | translate}}</th>
+                <!-- <th>{{'table.heading.gamemedia.gameHeader.charegecode' | translate}}</th> -->
                 
               </tr>
             </thead>
@@ -64,11 +64,11 @@
               <tr class="pointer-main" ng-repeat="fd in formData">
                 <td class="pointer"><a href="#/editinteractivedetail/{{fd.id}}">{{fd.clientId}}</a></td>
                 <td class="pointer"><a href="#/editinteractivedetail/{{fd.id}}">{{fd.externalId}}</a></td>
-                <td class="pointer"><a href="#/editinteractivedetail/{{fd.id}}">{{getMonth(fd.activityMonth)}}</a></td>
+                <td class="pointer"><a href="#/editinteractivedetail/{{fd.id}}">{{fd.activityMonth}}</a></td>
                 <td class="pointer"><a href="#/editinteractivedetail/{{fd.id}}">{{fd.dataUploadedDate | DateFormat}}</a></td>
                 <td class="pointer"><a href="#/editinteractivedetail/{{fd.id}}">{{fd.businessLine}}</a></td>
                 <td class="pointer"><a href="#/editinteractivedetail/{{fd.id}}">{{fd.mediaCategory}}</a></td>
-                <td class="pointer"><a href="#/editinteractivedetail/{{fd.id}}">{{fd.chargeCode}}</a></td>
+                <!-- <td class="pointer"><a href="#/editinteractivedetail/{{fd.id}}">{{fd.chargeCode}}</a></td> -->
                 
               </tr>
             </tbody>
