--- a/app/views/settlement/creategameevent.html
+++ b/app/views/settlement/creategameevent.html
@@ -57,7 +57,8 @@
 						<label class="control-label" for="activityMonth">{{ 'label.eventgame.activitymonth' | translate }}</label>
 						<div class="controls">
 							<!-- <input type="text" datepicker-pop="dd MMMM yyyy" ng-model="activity.date" is-open="opened" min="minDate" max="maxDate" date-disabled="disabled(date, mode)" required late-Validate style="background-color:#FFFFFF;"  readonly/> -->
-							<select ng-model="formData.activityMonth" ng-options="pn.id as pn.mon for pn in months" value="{{pn.id}}" id="activityMonth"></select>
+							<!-- <select ng-model="formData.activityMonth" ng-options="pn.id as pn.mon for pn in months" value="{{pn.id}}" id="activityMonth"></select> -->
+							<input type="text" datepicker-pop="MMM yyyy" ng-model="activity.date" is-open="opened" min="minDate" max="maxDate" date-disabled="disabled(date, mode)" required late-Validate style="background-color:#FFFFFF;" id="activityMonth" readonly/>
 						</div>
 					</div>
 				</td>
