exception cath functionality added for unique key

--- a/app/views/administration/game.html
+++ b/app/views/administration/game.html
@@ -93,7 +93,7 @@
         </tbody>
     </table>
       </tab>
-      <tab heading="{{'tab.partner.addgame' | translate}}" select="setGameScreen()" active="game">
+<!--       <tab heading="{{'tab.partner.addgame' | translate}}" select="setGameScreen()" active="game">
         <div class="pull-right btn-group">
           <a href="#/partnergame" class="btn btn-primary"><i class="icon-plus icon-white"></i>{{ 'button.add' | translate }}</a>
         </div>
@@ -116,7 +116,7 @@
               </tr>
             </tbody>
           </table>
-      </tab>
+      </tab> -->
       
       <tab heading="{{'tab.partner.revenue' | translate}}" select="setRevenueSettlementScreen()">
       <form class="form-horizontal well" ng-submit="submitRevenueSettlement()">
