--- a/app/views/settlement/creategameevent.html
+++ b/app/views/settlement/creategameevent.html
@@ -88,19 +88,7 @@
 					</div>
 				</td>
 			</tr>
-			<tr>
-				<td width="50%">
-					<div class="control-group">
-						<label class="control-label" for="mediaCategory">{{ 'label.eventgame.mediacategory' | translate }}</label>
-						<div class="controls">
-							<select ng-model="formData.mediaCategory"
-								ng-options="mC.id as mC.mCodeValue for mC in mediaCategoryDatas"
-								value="{{mC.mCodeValue}}" id="mediaCategory">
-							</select>	
-						</div>
-					</div>
-				</td>
-			</tr>
+			
 		<!-- 
 			<tr>
 				<td width="50%">
@@ -136,18 +124,23 @@
 						<tr class="graybg">
                          <th>{{ 'label.source' | translate }}</th>
                          <th>{{ 'label.contentname' | translate }}</th>
+                         <th>{{ 'label.eventgame.mediacategory'| translate }}</th>
                          <th>{{ 'label.contentprovider' | translate }}</th>
                          <th>{{ 'label.channelname' | translate }}</th>
                          <th>{{ 'label.servicename' | translate }}</th>
                          <th>{{ 'label.endUserPrice' | translate }}</th>
                          <th>{{'label.download' | translate}}</th>
                          <th>{{ 'label.grossRevenue' | translate }}</th>
+                         <th><i class="icon-trash icon-large"></i></th>
+                
+				
                          
                          </tr>  
                          <tr ng-repeat= "ad in  interactiveData">
 		<!--   <td><select class="input-small" ng-model="formData.eventId" ng-options="data.id as data.mCodeValue for data in data"  value="{{data.id}}"></select></td> -->
 		  	<td><select class="input-small" ng-model="ad.playSource" id="playSource" ng-options="playSource.id as playSource.mCodeValue for playSource in playSources" value="{{playSource.id}}"></select></td>
-		 	 <td><input class="input-small" type="text" id="contentName" ng-model="ad.contentName"></td>
+		 	<td><input class="input-small" type="text" id="contentName" ng-model="ad.contentName"></td>
+		 	<td><select class="input-small" ng-model="ad.mediaCategory" id="mediaCategory" ng-options="mediaCategoryData.id as mediaCategoryData.mCodeValue for mediaCategoryData in mediaCategoryDatas" value="{{mediaCategoryData.id}}"></select></td>
 		 	<!-- <td><select class="input-small" ng-model="ad.contentName" id="contentName" ng-options="mediaData.mediaId as mediaData.mediaTitle for mediaData in mediaDatas"  value="{{mediaData.mediaId}}"></select></td> -->
 			<td><select class="input-small"ng-model="ad.contentProvider" id="contentProvider" ng-options="contentData.id as contentData.partnerName for contentData in contentDatas"  value="{{contentDatas.id}}"></select></td>
 			<td><select  class="input-small" ng-model="ad.channelName" id="channelName" ng-options="channelData.id as channelData.partnerName for channelData in channelDatas"  value="{{channelDatas.id}}"></select></td>
