--- a/app/views/clients/editrevenushare.html
+++ b/app/views/clients/editrevenushare.html
@@ -104,7 +104,7 @@
              
 
 		  <div class="offset3">
-            <a href="#/viewclient/{{formData.clientId}}"><button type="reset" class="btn">{{'button.cancel' | translate}}</button></a>
+            <a href="#/viewclient/{{formData.clientId}}"><button type="reset" class="btn" ng-click="tabStatus()">{{'button.cancel' | translate}}</button></a>
             <button type="submit" class="btn btn-primary">{{'label.update' | translate}}</button>
           </div>
 
