--- a/app/views/clients/addrevenueshare.html
+++ b/app/views/clients/addrevenueshare.html
@@ -101,7 +101,7 @@
     
              
           <div class="offset3">
-            <a href="#/viewclient/{{clientId}}"><button type="reset" class="btn">{{'button.cancel' | translate}}</button></a>
+            <a href="#/viewclient/{{clientId}}"><button type="reset" class="btn" ng-click="tabStatus()">{{'button.cancel' | translate}}</button></a>
             <button type="submit" class="btn btn-primary">{{'label.save' | translate}}</button>
           </div>
 
