--- a/app/views/settlement/editoperatordeduction.html
+++ b/app/views/settlement/editoperatordeduction.html
@@ -42,7 +42,7 @@
 </table>
 
 <div class="offset3">
-            <a href="#/viewclient/{{formData.clientId}}" ><button type="reset" class="btn" ng-click="tabStatus()">{{'button.cancel'| translate}}</button></a>
+            <a href='#/viewclient/{{formData.clientId}}' ><button type="reset" class="btn" ng-click="tabStatus()">{{'button.cancel'| translate}}</button></a>
             <button type="submit" class="btn btn-primary">{{'button.update'| translate}}</button>
           </div>
 	 </fieldset>
