--- a/app/views/administration/game.html
+++ b/app/views/administration/game.html
@@ -45,13 +45,13 @@
             </thead>
             <tbody>
               <tr class="pointer-main" ng-repeat="pd in partnerAccountData">
-                <td class="pointer"><a href="#/editmapgamedetails/{{pd.id}}">{{pd.partnerName}}</a></td>
-                <td class="pointer"><a href="#/editmapgamedetails/{{pd.id}}">{{pd.partnerTypeStr}}</a></td>
-                <td class="pointer"><a href="#/editmapgamedetails/{{pd.id}}">{{pd.partnerAddress}}</a></td>
-                <td class="pointer"><a href="#/editmapgamedetails/{{pd.id}}">{{pd.contactNum}}</a></td>
-                <td class="pointer"><a href="#/editmapgamedetails/{{pd.id}}">{{pd.emailId}}</a></td>
-                <td class="pointer"><a href="#/editmapgamedetails/{{pd.id}}">{{pd.currencyCode}}</a></td>
-                <td class="pointer"><a href="#/editmapgamedetails/{{pd.id}}">{{pd.externalId}}</a></td>
+                <td class="pointer"><a href="#/viewpartneraccount/{{pd.id}}">{{pd.partnerName}}</a></td>
+                <td class="pointer"><a href="#/viewpartneraccount/{{pd.id}}">{{pd.partnerTypeName}}</a></td>
+                <td class="pointer"><a href="#/viewpartneraccount/{{pd.id}}">{{pd.partnerAddress}}</a></td>
+                <td class="pointer"><a href="#/viewpartneraccount/{{pd.id}}">{{pd.contactNum}}</a></td>
+                <td class="pointer"><a href="#/viewpartneraccount/{{pd.id}}">{{pd.emailId}}</a></td>
+                <td class="pointer"><a href="#/viewpartneraccount/{{pd.id}}">{{pd.currencyCode}}</a></td>
+                <td class="pointer"><a href="#/viewpartneraccount/{{pd.id}}">{{pd.externalId}}</a></td>
               </tr>
             </tbody>
           </table>
