--- a/app/views/administration/game.html
+++ b/app/views/administration/game.html
@@ -66,7 +66,7 @@
             <tr class="graybg">
                 <th>{{'table.heading.partnername' | translate}}</th>
                 <th>{{'table.heading.partnertype' | translate}}</th>
-                <th>{{'table.heading.agreementtype' | translate}}</th>
+                <th>{{'table.heading.partneragreement.category' | translate}}</th>
                 <th>{{'table.heading.agreement.status' | translate}}</th>
                 <th>{{'table.heading.royalty.type' | translate}}</th>
                 <th>{{'table.heading.settlement.source' | translate}}</th>
