--- a/app/views/settlement/gameevent.html
+++ b/app/views/settlement/gameevent.html
@@ -55,7 +55,7 @@
                 <th>{{'table.heading.gamemedia.gameHeader.activityMonth' | translate}}</th>
                 <th>{{'table.heading.gamemedia.gameHeader.dataUploadDate' | translate}}</th>
                 <th>{{'table.heading.gamemedia.gameHeader.businessLine' | translate}}</th>
-                <th>{{'table.heading.gamemedia.gameHeader.category' | translate}}</th>
+                <!-- <th>{{'table.heading.gamemedia.gameHeader.category' | translate}}</th> -->
                 <!-- <th>{{'table.heading.gamemedia.gameHeader.charegecode' | translate}}</th> -->
                 
               </tr>
@@ -67,7 +67,7 @@
                 <td class="pointer"><a href="#/editinteractivedetail/{{fd.id}}">{{fd.activityMonth}}</a></td>
                 <td class="pointer"><a href="#/editinteractivedetail/{{fd.id}}">{{fd.dataUploadedDate | DateFormat}}</a></td>
                 <td class="pointer"><a href="#/editinteractivedetail/{{fd.id}}">{{fd.businessLine}}</a></td>
-                <td class="pointer"><a href="#/editinteractivedetail/{{fd.id}}">{{fd.mediaCategory}}</a></td>
+                <!-- <td class="pointer"><a href="#/editinteractivedetail/{{fd.id}}">{{fd.mediaCategory}}</a></td> -->
                 <!-- <td class="pointer"><a href="#/editinteractivedetail/{{fd.id}}">{{fd.chargeCode}}</a></td> -->
                 
               </tr>
