--- a/app/views/clients/editrevenushare.html
+++ b/app/views/clients/editrevenushare.html
@@ -20,9 +20,9 @@
                     <tr>
                       <td>
                       		<div class="control-group">
-								<label class="control-label" for="businessLine">{{'settlement.label.business.line' | translate}}&nbsp;<span class="required">*</span></label>
+								<label class="control-label" for="revenueShareCode">{{'settlement.label.deduction.code' | translate}}&nbsp;<span class="required">*</span></label>
 									<div class="controls">
-									<select ng-model="formData.businessLine" id="businessLine"  ng-options="pn.id as pn.mCodeValue for pn in businessLineDatas" value="{{pn.id}}">
+									<select ng-model="formData.revenueShareCode" id="deductionCode"  ng-options="pn.id as pn.deductionCode for pn in deductionMasterDatas" value="{{pn.id}}">
 										</select>
 									</div>
 							</div> 
