--- a/app/views/import/uploadfile.html
+++ b/app/views/import/uploadfile.html
@@ -32,6 +32,7 @@
 				<option value="EventOrder">Event Order</option>
 				<option value="MediaGames">Media Games</option>
 				<option value="GameEvent">Game Event</option>
+				<option value="Advertisement">Advertisement</option>
               </select>
               &nbsp;&nbsp;&nbsp;
               <a ng-hide="formData.status =='-1'" ng-click="downloadFile(formData.status)"><i class=" icon-download-alt icon-white"></i> Download Sample File</a>
