--- a/app/views/import/uploadfile.html
+++ b/app/views/import/uploadfile.html
@@ -31,7 +31,10 @@
 				<option value="MediaAssets">Media Assets</option>
 				<option value="EventOrder">Event Order</option>
 				<option value="MediaGames">Media Games</option>
-				<option value="GameEvent">Game Event</option>
+				<option value="OperatorUpload">Operator Upload</option>
+				<option value="PlatformUpload">Platform Upload</option>
+				<option value="Advertisement">Advertisement Upload</option>
+				
               </select>
               &nbsp;&nbsp;&nbsp;
               <a ng-hide="formData.status =='-1'" ng-click="downloadFile(formData.status)"><i class=" icon-download-alt icon-white"></i> Download Sample File</a>
