--- a/app/views/settlement/viewpartneraccount.html
+++ b/app/views/settlement/viewpartneraccount.html
@@ -29,6 +29,10 @@
                               <td>{{partnerTypeName}}</td>
                             </tr>
                             <tr>
+                              <td>{{ 'label.partnerAddress' | translate }}</td>
+                              <td>{{partnerAddress}}</td>
+                            </tr>
+                            <tr>
                               <td>{{ 'label.contactnum' | translate }}</td>
                               <td>{{contactNum}}</td>
                             </tr>
@@ -37,16 +41,12 @@
                               <td>{{emailId}}</td>
                             </tr>
                             <tr>
-                              <td>{{ 'label.externalId' | translate }}</td>
-                              <td>{{externalId}}</td>
-                            </tr>
-                            <tr>
                               <td>{{ 'label.currencyname' | translate }}</td>
                               <td>{{currencyName}}</td>
                             </tr>
                             <tr>
-                              <td>{{ 'label.royaltysequence' | translate }}</td>
-                              <td>{{royaltySequence}}</td>
+                              <td>{{ 'label.externalId' | translate }}</td>
+                              <td>{{externalId}}</td>
                             </tr>
                            
                           </table>
