--- a/app/views/import/uploadfile.html
+++ b/app/views/import/uploadfile.html
@@ -23,17 +23,17 @@
             <div class="controls">
               <select ng-model="formData.status" >
                <option value="-1">--first choice--</option>
-                <option value="Hardware Items">Hardware Items</option>
+                <!-- <option value="Hardware Items">Hardware Items</option>
                 <option value="Adjustments">Adjustments</option>
                 <option value="Payments">Payments</option>
 				<option value="Mrn">MRN</option>
 				<option value="Epg">EPG</option>
 				<option value="MediaAssets">Media Assets</option>
-				<option value="EventOrder">Event Order</option>
+				<option value="EventOrder">Event Order</option> -->
 				<option value="MediaGames">Media Games</option>
 				<option value="OperatorUpload">Operator Upload</option>
 				<option value="PlatformUpload">Platform Upload</option>
-				<option value="Advertisement">Advertisement Upload</option>
+				<option value="AdvertisementUpload">Advertisement Upload</option>
 				
               </select>
               &nbsp;&nbsp;&nbsp;
