--- a/app/views/clients/createclient.html
+++ b/app/views/clients/createclient.html
@@ -19,14 +19,14 @@
                 <select ng-model="formData.officeId"  ng-options="office.id as office.name for office in offices" value="{{office.id}}" ng-change="changeOffice(formData.officeId)"></select>
               </div>
             </div>
-             <div class="control-group">
+             <!-- <div class="control-group">
               <label class="control-label">{{'label.clientcategeory' | translate}}<span class="required">*</span></label>
               <div class="controls">
                 <select ng-model="formData.clientCategory"  ng-options="clientCategoryData.id as clientCategoryData.categoryType for clientCategoryData in clientCategoryDatas" value="{{clientCategoryDatas.id}}"></select>
               </div>
-            </div>
+            </div> -->
   		      <div class="control-group">
-              <label class="control-label" for="firstname">{{'label.firstname' | translate}}<span class="required">*</span></label>
+              <label class="control-label" for="firstname">{{'label.clientname' | translate}}<span class="required">*</span></label>
               <div class="controls">
                 <input type="text" id="firstname" name="firstname" ng-model="formData.firstname" required ng-minlength=3 late-Validate/>
                 <span  ng-show="createclientform.firstname.$invalid">
@@ -37,16 +37,16 @@
                 </span>
               </div>
             </div>
-            <div class="control-group">
+            <!-- <div class="control-group">
               <label class="control-label" for="middlename">{{'label.middlename' | translate}}</label>
               <div class="controls">
                 <input type="text" id="middlename" ng-model="formData.middlename"/>
               </div>
-            </div>
+            </div> -->
             <div class="control-group">
-              <label class="control-label" for="lastname">{{'label.lastname' | translate}}<span class="required">*</span></label></label>
+              <label class="control-label" for="lastname">{{'label.circle' | translate}}<span class="required">*</span></label></label>
               <div class="controls">
-                <input type="text" id="lastname" name="lastname" ng-model="formData.lastname" required ng-minlength=3 late-Validate/>
+                <select ng-model="formData.lastname"  ng-options="circle.stateName as circle.stateName for circle in circleDatas" value="{{office.id}}" ng-change="changeOffice(formData.officeId)"></select><!-- <input type="text" id="lastname" name="lastname" ng-model="formData.lastname" required ng-minlength=3 late-Validate/> -->
                 <span  ng-show="createclientform.lastname.$invalid">
                     <small class="error" ng-show="createclientform.lastname.$error.req">
                         Required Field
@@ -74,12 +74,12 @@
               </div>
             </div>
             
-            <div class="control-group" ng-hide="configurationProperty==false">
+            <!-- <div class="control-group" ng-hide="configurationProperty==false">
               <label class="control-label">Login<span class="required">*</span></label>
               <div class="controls">
                 <input type="text" id="login" name="login" ng-model="formData.login"/>
               </div>
-            </div>
+            </div> -->
             
             <!-- <div class="control-group">
               <label class="control-label" for="licenseFree">{{'label.client.license.fee' | translate}}</label>
@@ -102,12 +102,12 @@
                 <input type="text" id="addressNo" ng-model="formData.addressNo"/>
               </div>
             </div>
-            <div class="control-group">
+            <!-- <div class="control-group">
               <label class="control-label">{{'label.street' | translate}}</label>
               <div class="controls">
                 <input type="text" id="street" ng-model="formData.street"/>
               </div>
-            </div>
+            </div> -->
   		      <div class="control-group">
               <label class="control-label" for="city">{{'label.city' | translate}}<span class="required">*</span></label>
               <div class="controls">
@@ -139,12 +139,12 @@
                    <option  data-ng-repeat="city in cities" value="{{city}}">
              </datalist>
              
-             <div class="control-group" ng-hide="configurationProperty==false">
+             <!-- <div class="control-group" ng-hide="configurationProperty==false">
               <label class="control-label">Password<span class="required">*</span></label>
               <div class="controls">
                 <input type="password"  ng-model="formData.password"/>
               </div>
-            </div>
+            </div> -->
             <!-- <div class="control-group">
               <label class="control-label">{{'label.client.royaltytype' | translate}}<span class="required">*</span></label>
               <div class="controls">
