--- a/app/views/settlement/creategameevent.html
+++ b/app/views/settlement/creategameevent.html
@@ -1,9 +1,11 @@
 <div ng-controller="CreateGameEventController">
  <div>
-        <ul class="breadcrumb">
-              <li><a href="#/gameevent/{{formData.cId}}">{{'label.gameevent' | translate}}</a> <span class="divider">/</span></li>
-              <li class="active">{{'label.creategameevent' | translate}}</li>
-          </ul>
+	<ul class="breadcrumb">
+		<li><a href="#/clients">{{'link.clients' | translate}}</a> <span class="divider">/</span></li>
+		<li><a href='#/viewclient/{{formData.cId}}'>{{'link.view.client' | translate}}</a> <span class="divider">/</span></li>
+		<li><a href="#/gameevent/{{formData.cId}}">{{'label.gameevent' | translate}}</a> <span class="divider">/</span></li>
+		<li class="active">{{'label.creategameevent' | translate}}</li>
+	</ul>
  </div>
 <form class="form-horizontal well" ng-submit="submit()">
  <div class="error" ng-show="errorStatus || errorDetails">
@@ -20,7 +22,7 @@
 					<div class="control-group">
 						<label class="control-label" for="clientId">{{ 'label.eventgame.clientid' | translate }}</label>
 						<div class="controls">
-							<input type="text" id="clientId" ng-model="formData.clientId">
+							<input type="text" id="clientId" ng-model="formData.clientId" readonly>
 						</div>
 					</div>
 				</td>
