--- a/app/views/settlement/editinteractivedetail.html
+++ b/app/views/settlement/editinteractivedetail.html
@@ -1,126 +1,24 @@
 <div ng-controller="EditInteractiveDetailController">
  <div>
         <ul class="breadcrumb">
+	          <li><a href="#/clients">{{'link.clients' | translate}}</a> <span class="divider">/</span></li>
+			  <li><a href='#/viewclient/{{cId}}'>{{'link.view.client' | translate}}</a> <span class="divider">/</span></li>
               <li><a href="#/gameevent/{{cId}}">{{'label.gameevent' | translate}}</a> <span class="divider">/</span></li>
-              <li class="active">{{'label.creategameevent' | translate}}</li>
+              <li><a href="#/viewinteractivedetails/{{headerId}}">{{'label.viewgameevent' | translate}}</a> <span class="divider">/</span></li>
+              <li class="active">{{'label.editgameevent' | translate}}</li>
           </ul>
  </div>
 <form class="form-horizontal well" ng-submit="submit()">
- <div class="error" ng-show="errorStatus || errorDetails">
-		<label>{{'label.contract.error' | translate}}</label>
-		<label ng-show="errorStatus">{{errorStatus}}</label>
-		<label ng-hide="errorStatus" ng-repeat="error in errorDetails">{{error.code | translate}}</label>
+ 		<div class="error" ng-show="errorStatus || errorDetails">
+			<label>{{'label.contract.error' | translate}}</label>
+			<label ng-show="errorStatus">{{errorStatus}}</label>
+			<label ng-hide="errorStatus" ng-repeat="error in errorDetails">{{error.code | translate}}</label>
 	    </div>
-	<fieldset>
-		<legend>{{'label.creategameevent' | translate}}</legend>
-		<table width="100%">
 		
-		    <tr>
-				<td width="50%">
-					<div class="control-group">
-						<label class="control-label" for="clientId">{{ 'label.eventgame.clientid' | translate }}</label>
-						<div class="controls">
-							<input type="text" id="clientId" ng-model="formData.clientId">
-						</div>
-					</div>
-				</td>
-			</tr>
-			
-			    <tr>
-				<td width="50%">
-					<div class="control-group">
-						<label class="control-label" for="externalId">{{ 'label.eventgame.externalid' | translate }}</label>
-						<div class="controls">
-						<input type="text" id="externalId" ng-model="formData.externalId">	
-						</div>
-					</div>
-				</td>
-			</tr>
-		    
-		  <!--   <tr>
-				<td width="50%">
-					<div class="control-group">
-						<label class="control-label" for="circle">{{ 'label.eventgame.circle' | translate }}</label>
-						<div class="controls">
-							<select ng-model="formData.circle"
-								ng-options="cD.id as cD.stateName for cD in circleDatas"
-								value="{{cD.stateName}}" id="circle">
-							</select>
-						</div>
-					</div>
-				</td>
-			</tr> -->
-			
-			<tr>
-				<td width="50%">
-					<div class="control-group">
-						<label class="control-label" for="activityMonth">{{ 'label.eventgame.activitymonth' | translate }}</label>
-						<div class="controls">
-							<!-- <input type="text" datepicker-pop="dd MMMM yyyy" ng-model="activity.date" is-open="opened" min="minDate" max="maxDate" date-disabled="disabled(date, mode)" required late-Validate style="background-color:#FFFFFF;"  readonly/> -->
-							<!-- <select ng-model="formData.activityMonth" ng-options="pn.id as pn.mon for pn in months" value="{{pn.id}}" id="activityMonth"></select> -->
-							<input type="text" datepicker-pop="MMM yyyy" ng-model="activity.date" is-open="opened" min="minDate" max="maxDate" date-disabled="disabled(date, mode)" required late-Validate style="background-color:#FFFFFF;" id="activityMonth" readonly/>
-							
-						</div>
-					</div>
-				</td>
-			</tr>
-			
-			<tr>
-				<td width="50%">
-					<div class="control-group">
-						<label class="control-label" for="dataUploadedDate">{{ 'label.eventgame.datauploaddate' | translate }}</label>
-						<div class="controls">
-							<input type="text" datepicker-pop="dd MMMM yyyy" ng-model="upload.date" is-open="opened" min="minDate" max="maxDate" date-disabled="disabled(date, mode)" required late-Validate style="background-color:#FFFFFF;" id="dataUploadedDate" readonly/>
-						</div>
-					</div>
-				</td>
-			</tr>
-			
-			<tr>
-				<td width="50%">
-					<div class="control-group">
-						<label class="control-label" for="businessLine">{{ 'label.eventgame.businessLine' | translate }}</label>
-						<div class="controls">
-							<select ng-model="formData.businessLine"
-								ng-options="bD.id as bD.mCodeValue for bD in businessLineDatas"
-								value="{{bD.mCodeValue}}" id="businessLine">
-							</select>	
-						</div>
-					</div>
-				</td>
-			</tr>
-		
-		<!-- 	<tr>
-				<td width="50%">
-					<div class="control-group">
-						<label class="control-label" for="chargeCode">{{ 'label.eventgame.chargecode' | translate }}</label>
-						<div class="controls">
-							<select ng-model="formData.chargeCode"
-								ng-options="Cc.id as Cc.chargeDescription for Cc in chargeCodeDatas"
-								value="{{Cc.chargeDescription}}" id="chargeCode">
-							</select>	
-						</div>
-					</div>
-				</td>
-			</tr> -->
-						
-			
-		    
-		</table>
 		<fieldset>
-          <legend>Interactive Details</legend>
-		<table id="interactiveTable">
-          <tr class="control-group">
-                <td>
-                    <form>
-                      <button type="button" ng-click="addInteractiveDetails()" id="interactiveDataArray" class="btn btn-primary"><i class="icon-plus icon-white"></i></button>
-                    </form>
-                </td>
-              </tr>
-              <tr class="span2"></tr>
-           </table>
+          <legend>Edit Interactive Details</legend>
           
-					<table class ="table" width="100%" ng-show="interactiveData.length>0">
+					<table class ="table" width="100%">
 						<tr class="graybg">
                          <th>{{ 'label.source' | translate }}</th>
                          <th>{{ 'label.contentname' | translate }}</th>
@@ -133,28 +31,26 @@
                          <th>{{ 'label.grossRevenue' | translate }}</th>
                          
                          </tr>  
-                         <tr ng-repeat= "ad in  interactiveData">
-		<!--   <td><select class="input-small" ng-model="formData.eventId" ng-options="data.id as data.mCodeValue for data in data"  value="{{data.id}}"></select></td> -->
-			<td><select class="input-small" ng-model="ad.playSource" id="playSource" ng-options="playSource.id as playSource.mCodeValue for playSource in playSources" value="{{playSource.id}}"></select></td>
-			<td><input  class="input-small" type="text" id="contentName" ng-model="ad.contentName"></td>
-			<td><select class="input-small" ng-model="ad.mediaCategory" id="mediaCategory" ng-options="mediaCategoryData.id as mediaCategoryData.mCodeValue for mediaCategoryData in mediaCategoryDatas" value="{{mediaCategoryData.id}}"></select></td>
-			<!-- <td><select class="input-small" ng-model="ad.contentName" id="contentName" ng-options="mediaData.mediaId as mediaData.mediaTitle for mediaData in mediaDatas"  value="{{mediaData.mediaId}}"></select></td> -->
-			<td><select class="input-small"ng-model="ad.contentProvider" id="contentProvider" ng-options="contentData.id as contentData.partnerName for contentData in contentDatas"  value="{{contentDatas.id}}"></select></td>
-			<td><select  class="input-small" ng-model="ad.channelName" id="channelName" ng-options="channelData.id as channelData.partnerName for channelData in channelDatas"  value="{{channelDatas.id}}"></select></td>
-	        <td><select  class="input-small"ng-model="ad.serviceName" id="serviceName" ng-options="serviceData.id as serviceData.partnerName for serviceData in serviceDatas"  value="{{serviceDatas.id}}"></select></td>
-		    <td><input class="input-mini" type="text" id="endUserPrice" ng-model="ad.endUserPrice"></td>
-			<td><input class="input-mini" type="text" id="downloads" ng-model="ad.downloads"></td>
-			<td><input  class="input-mini" type="text" id="grossRevenue" ng-model="ad.grossRevenue"></td>
-			
-			<td><a ng-click="removeInteractiveDetail($index)"><i class="icon-remove icon-white"></i></a></td>
-							</tr>
+                         <tr>
+							<!--   <td><select class="input-small" ng-model="formData.eventId" ng-options="data.id as data.mCodeValue for data in data"  value="{{data.id}}"></select></td> -->
+								<td><select class="input-small" ng-model="formData.playSource" id="playSource" ng-options="playSource.id as playSource.mCodeValue for playSource in playSources" value="{{playSource.id}}"></select></td>
+								<td><input  class="input-small" type="text" id="contentName" ng-model="formData.contentName"></td>
+								<td><select class="input-small" ng-model="formData.mediaCategory" id="mediaCategory" ng-options="mediaCategoryData.id as mediaCategoryData.mCodeValue for mediaCategoryData in mediaCategoryDatas" value="{{mediaCategoryData.id}}"></select></td>
+								<!-- <td><select class="input-small" ng-model="ad.contentName" id="contentName" ng-options="mediaData.mediaId as mediaData.mediaTitle for medformDataData in mediaDatas"  value="{{mediaData.mediaId}}"></select></td> -->
+								<td><select class="input-small"ng-model="formData.contentProvider" id="contentProvider" ng-options="contentData.id as contentData.partnerName for contentData in contentDatas"  value="{{contentDatas.id}}"></select></td>
+								<td><select  class="input-small" ng-model="formData.channelName" id="channelName" ng-options="channelData.id as channelData.partnerName for channelData in channelDatas"  value="{{channelDatas.id}}"></select></td>
+						        <td><select  class="input-small"ng-model="formData.serviceName" id="serviceName" ng-options="serviceData.id as serviceData.partnerName for serviceData in serviceDatas"  value="{{serviceDatas.id}}"></select></td>
+							    <td><input class="input-mini" type="text" id="endUserPrice" ng-model="formData.endUserPrice"></td>
+								<td><input class="input-mini" type="text" id="downloads" ng-model="formData.downloads"></td>
+								<td><input  class="input-mini" type="text" id="grossRevenue" ng-model="formData.grossRevenue"></td>
+						 </tr>
 						
 					</table>
-					</fieldset>
-		<div class="offset3">
-			<a href="#/gameevent/{{cId}}"><button type="reset" class="btn">Cancel</button></a>
+					<div class="offset3">
+			<a href="#/viewinteractivedetails/{{headerId}}"><button type="reset" class="btn">Cancel</button></a>
 			<button type="submit" class="btn btn-primary">Save</button>
 		</div>
-	</fieldset>
+					</fieldset>
+		
 </form>
 </div>
