--- a/app/views/administration/game.html
+++ b/app/views/administration/game.html
@@ -384,7 +384,8 @@
 				<th>{{ 'table.heading.sequence' | translate }}</th>
 				<th>{{ 'table.heading.royalityshare' | translate }}</th>
 				<th>{{ 'table.heading.rayolityamt' | translate }}</th>
-				<th>{{ 'table.heading.netamount' | translate }}</th>	
+				<th>{{ 'table.heading.currency' | translate }}</th>	
+				<th>{{ 'table.heading.status' | translate }}</th>	
 				</tr>
 			</thead>
 				<tbody>
@@ -402,7 +403,8 @@
 			              	<td>{{distributionData.sequence}}</td>
 			              	<td>{{distributionData.royaltyShare}}</td>
 			              	<td>{{distributionData.royaltyAmount}}</td>
-			              	<td>{{distributionData.netAmount}}</td>
+			              	<td>{{distributionData.currency}}</td>
+			              	<td>{{distributionData.status}}</td>
 			              </tr>
 			
 			
