--- a/app/views/administration/game.html
+++ b/app/views/administration/game.html
@@ -204,7 +204,7 @@
              		</td>
              		<td></td><td></td>
              		<td>
-             		<a  ng-click="unlockIt(ss.partnerAccountId)" class="btn btn-primary"><i class="icon-unlock icon-white"></i></a>
+             		<a ng-click="unlockIt(ss.partnerAccountId)" class="btn btn-primary"><i class="icon-unlock icon-white"></i></a>
              		</td>
             	</tr>
             </table>
@@ -324,7 +324,10 @@
       
       <body>
 	<legend>{{'label.disbursementstopartners' | translate}}</legend>
+	<div class="pull-right">
+	<img alt="Loading"  ng-src="./images/spinner.gif" width="30" height="30" ng-show="loading">
 		<button ng-click="refresh()" type="button" class="btn btn-primary pull-right">Refresh</button>
+		</div>
             <table>
             	<tr>
             		
@@ -352,7 +355,7 @@
               				<label class="control-label">{{ 'link.disbursements.patnername' | translate }}<span class="required">*</span></label>
               				<div class="controls">
               				
-                			<select ng-model="formData.partnerName" ng-change="getpartnerName(formData.partnerName)" ng-options="pn.partnerName as pn.partnerName for pn in partnerNames" value="{{pn.partnerName}}"></select>
+                			<select id="partnerN" ng-model="formData.partnerName" ng-change="getpartnerName(formData.partnerName)" ng-options="pn.partnerName as pn.partnerName for pn in partnerNames" value="{{pn.partnerName}}" disabled></select>
               				</div>
             				</div>
             		</td>
@@ -360,7 +363,7 @@
             				<div class="control-group">
               				<label class="control-label">{{ 'link.disbursements.month' | translate }}<span class="required">*</span></label>
               				<div class="controls">
-                			<select ng-model="formData.invoiceDate" ng-change="getTableData(formData.invoiceDate)" ng-options="pn.id as pn.mon for pn in months" value="{{pn.id}}"></select>
+                			<select id="activityM" ng-model="formData.activityDate" ng-change="getTableData(formData.activityDate)" ng-options="pn.activityMonth as pn.activityMonth for pn in activityMonths" value="{{pn.activityMonth}}" disabled></select>
               				</div>
             				</div>
             		</td>
@@ -370,7 +373,7 @@
             <table border="2">
 	    
 			<thead>
-				<tr>
+				<tr class="graybg">
 				<th>{{ 'table.heading.branch' | translate }}</th>
 				<th>{{ 'table.heading.city' | translate }}</th>
 				<th>{{ 'table.heading.state' | translate }}</th>
