notification popup added

--- a/app/views/clients/clients.html
+++ b/app/views/clients/clients.html
@@ -36,3 +36,4 @@
         <li class="next" ><a ng-click="clients.next()" href="" ng-disabled="!clients.hasNext()">Next &rarr;</a></li>
     </ul>
 </div>
+<div notifications="bottom right"></div>
