--- a/app/views/clients/editrevenushare.html
+++ b/app/views/clients/editrevenushare.html
@@ -43,7 +43,7 @@
                    <tr>
                    		<td>
                    				<div class="control-group">
-                     			<label class="control-label" for="revenueShareType">{{ 'label.royaltytype' | translate }}&nbsp;<span class="required">*</span></label>
+                     			<label class="control-label" for="revenueShareType">{{ 'label.revenuesharetype' | translate }}&nbsp;<span class="required">*</span></label>
                     			<div class="controls">
                     			<select  ng-model="formData.revenueShareType" id="revenueShareType" ng-change="setView(formData.revenueShareType)" ng-options="rtd.id as rtd.mCodeValue for rtd in royaltyTypeDatas" value="{{rtd.id}}">
                     			</select>
