--- a/app/views/clients/createclient.html
+++ b/app/views/clients/createclient.html
@@ -19,12 +19,12 @@
                 <select ng-model="formData.officeId"  ng-options="office.id as office.name for office in offices" value="{{office.id}}" ng-change="changeOffice(formData.officeId)"></select>
               </div>
             </div>
-             <!-- <div class="control-group">
+             <div class="control-group">
               <label class="control-label">{{'label.clientcategeory' | translate}}<span class="required">*</span></label>
               <div class="controls">
                 <select ng-model="formData.clientCategory"  ng-options="clientCategoryData.id as clientCategoryData.categoryType for clientCategoryData in clientCategoryDatas" value="{{clientCategoryDatas.id}}"></select>
               </div>
-            </div> -->
+            </div>
   		      <div class="control-group">
               <label class="control-label" for="firstname">{{'label.clientname' | translate}}<span class="required">*</span></label>
               <div class="controls">
